--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".PlayerListActivity" />
         <activity android:name=".MainGameDay" />
         <activity android:name=".MainGameNight" />
+        <activity android:name=".MainGameActivity"></activity>
     </application>
 
 </manifest>
