--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity android:name=".PlayerListActivity" />
         <activity android:name=".MainGameDay" />
         <activity android:name=".MainGameNight" />
-        <activity android:name=".MainGameActivity"></activity>
+        <activity android:name=".MainGameActivity" />
+        <activity android:name=".YouWinActivity"></activity>
     </application>
 
 </manifest>
